test/TestSuite/Scheduler/Errors/overbooked_duration.tjp
project "Test" 2011-06-24 +1m

resource r "R"

# MARK: warning 6 overbooked_duration
task "T" {
  allocate r
  duration 1d
  booking r 2011-06-24-9:00 +8h,
            2011-06-27-9:00 +1h
}
